--- a/FrontEnd/sign in.css
+++ b/FrontEnd/sign in.css
@@ -41,29 +41,23 @@
     left: 60px;
     
 }
-.two{
-    position: relative;
-    top: -50px;
-    left: 60px;
-}
+
 form input{
     width: 295px;
     height: 40px;
     padding: 5px 15px;
     background: linear-gradient(rgba(68, 65, 65, 0.7),rgba(67, 63, 63, 0.7),rgba(65, 63, 63, 0.7));
     color: antiquewhite;
-    border-radius: 5px;
-    margin: 0%;
+    border-radius: 3px;
+    margin-bottom: 20px;
     font-size: 1em;
     border: none;
 }
 button{
-    width: 310px;
-    height: 50px;
+    width: 325px;
+    height: 40px;
     border: none;
     position: relative;
-    top: 110px;
-    left: 10px;
     color: white;
     font-size: 1em;
     font-weight: 500;
